Tree push improved.

--- a/Example/Makefile
+++ b/Example/Makefile
@@ -6,7 +6,7 @@
 CXX = g++
 
 # Configure compile flags.
-CXXFLAGS ?= -w
+CXXFLAGS ?= -w # -Wall -Wextra
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
